[gd_scene load_steps=6 format=2]

[ext_resource path="res://Data/Enemies/Ghost/Idle (44x30).png" type="Texture" id=1]
[ext_resource path="res://Scripts/Ghost.gd" type="Script" id=2]
[ext_resource path="res://Objects/Particles.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 13, 13.5 )

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 15.5, 14.5 )

[node name="Ghost" type="KinematicBody2D"]
position = Vector2( 335, 47 )
z_index = 1
collision_layer = 4
collision_mask = 4
collision/safe_margin = 1.0
script = ExtResource( 2 )
particles_tscn = ExtResource( 3 )
color = Color( 0.788235, 0.788235, 0.788235, 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 1 )
shape = SubResource( 42 )

[node name="KillArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 44 )

[node name="KnockbackTime" type="Timer" parent="."]
wait_time = 0.2

[connection signal="is_dead" from="." to="." method="_on_Ghost_is_dead"]
[connection signal="area_entered" from="KillArea" to="." method="_on_KillArea_area_entered"]
[connection signal="body_entered" from="KillArea" to="." method="_on_KillArea_body_entered"]
[connection signal="timeout" from="KnockbackTime" to="." method="_on_KnockbackTime_timeout"]
